--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canfeit",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "keywords": [],
   "author": "wangjianhui <wangjianhui@herebookstore.com> (https://github.com/canfeit/canfeit/blob/master/README.md)",
@@ -25,9 +25,8 @@
   },
   "scripts": {
     "postinstall": "node main",
-    "release": "standard-version&&yarn doc",
+    "release": "standard-version",
     "push": "git push --follow-tags&&npm publish",
-    "doc": "typedoc --out docs --mode file --theme minimal --readme none",
     "install": "yarn global upgrade-interactive --latest&yarn upgradeInteractive --latest",
     "commitmsg": "commitlint -e"
   },
