--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canfeit",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "keywords": [],
   "author": "wangjianhui <wangjianhui@herebookstore.com> (https://github.com/canfeit/canfeit/blob/master/README.md)",
@@ -24,8 +24,8 @@
     "typescript-eslint-parser": ""
   },
   "scripts": {
-    "release": "standard-version",
-    "push": "git push --follow-tags&&npm publish",
+    "release": "standard-version&&npm publish",
+    "push": "git push --follow-tags",
     "install": "yarn global upgrade --latest&yarn upgrade --latest",
     "postinstall": "node main",
     "commitmsg": "commitlint -e"
