--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canfeit",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "",
   "keywords": [],
   "author": "wangjianhui <wangjianhui@herebookstore.com> (https://github.com/canfeit/canfeit/blob/master/README.md)",
@@ -26,7 +26,7 @@
   "scripts": {
     "pro": "npm run push&&npm run release",
     "push": "standard-version&&git push --follow-tags",
-    "release": "npm run publish",
+    "release": "npm publish",
     "install": "yarn global upgrade --latest&yarn upgrade --latest",
     "postinstall": "node main",
     "commitmsg": "commitlint -e"
