--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "canfeit",
-  "version": "0.0.16",
+  "version": "0.0.17",
+  "engines": {
+    "node": ">= 7.6.0"
+  },
   "description": "",
   "keywords": [],
   "author": "wangjianhui <wangjianhui@herebookstore.com> (https://github.com/canfeit/canfeit/blob/master/README.md)",
@@ -11,23 +14,23 @@
     "url": "https://github.com/canfeit/canfeit.git"
   },
   "license": "MIT",
+  "files": [],
   "dependencies": {
-    "@commitlint/cli": "",
-    "@commitlint/config-angular": "",
-    "eslint-plugin-typescript": "",
-    "fs-extra": "",
+    "@commitlint/cli": "6.0.2",
+    "@commitlint/config-angular": "6.0.2",
+    "eslint-plugin-typescript": "0.8.1",
+    "fs-extra": "5.0.0",
     "husky": "",
     "standard": "",
-    "standard-version": "",
+    "standard-version": "4.3.0",
     "typedoc": "",
-    "typescript": "",
-    "typescript-eslint-parser": ""
+    "typescript": "2.6.2",
+    "typescript-eslint-parser": "12.0.0"
   },
   "scripts": {
-    "pro": "npm run release&&npm run push",
+    "prod": "npm run release&&npm run push",
     "release": "standard-version",
     "push": "git push --follow-tags&&npm publish",
-    "install": "yarn global upgrade --latest&yarn upgrade --latest",
     "postinstall": "node main",
     "commitmsg": "commitlint -e"
   },
