--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,11 @@
+// canfeit will keep this file up to date, please back up your changes
 {
-    "files.autoSave": "onFocusChange",
-    // "javascript.validate.enable": false,
-    // "typescript.validate.enable": false,
-    // "standard.enable": false,
-    "standard.autoFixOnSave": true,
-    "standard.validate": [
-        "javascript",
-        {
-            "language": "typescript",
-            "autoFix": true
-        }
-    ],
-    "editor.wordWrap": "on"
+  "git.confirmSync": false,
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+  "git.ignoreLimitWarning": true,
+  "files.autoSave": "onFocusChange",
+  "editor.formatOnSave": true,
+  "editor.wordWrap": "on",
+  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
 }
