--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "canfeit",
   "version": "0.0.21",
   "engines": {
-    "node": ">= 7.6.0"
+    "node": ">= 10.13.0"
   },
   "description": "",
   "keywords": [],
@@ -18,20 +18,14 @@
   "dependencies": {
     "@commitlint/cli": "6.0.2",
     "@commitlint/config-angular": "6.0.2",
-    "eslint-plugin-typescript": "0.8.1",
     "fs-extra": "5.0.0",
     "husky": "",
-    "standard": "",
-    "standard-version": "4.3.0",
-    "typedoc": "",
-    "typescript": "2.6.2",
-    "typescript-eslint-parser": "12.0.0"
+    "standard-version": "4.3.0"
   },
   "scripts": {
-    "prod": "npm run release&&npm run push",
     "release": "standard-version",
-    "push": "git push --follow-tags&&npm publish",
-    "postinstall": "node main",
+    "prepublish": "git push --follow-tags",
+    "postinstall": "node -e console.log('#'.repeat(80)+'\\n\\n','docs:'+process.env.npm_package_homepage,'\\n\\n'+'#'.repeat(80))",
     "commitmsg": "commitlint -e"
   },
   "bugs": {
@@ -40,12 +34,6 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-angular"
-    ]
-  },
-  "standard": {
-    "parser": "typescript-eslint-parser",
-    "plugins": [
-      "typescript"
     ]
   }
 }
