--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "canfeit",
   "version": "0.0.21",
   "engines": {
-    "node": ">= 10.13.0"
+    "node": ">= 10.12.0"
   },
   "description": "",
   "keywords": [],
@@ -16,24 +16,27 @@
   "license": "MIT",
   "files": [],
   "dependencies": {
-    "@commitlint/cli": "6.0.2",
-    "@commitlint/config-angular": "6.0.2",
     "fs-extra": "5.0.0",
-    "husky": "",
+    "husky": "^1.1.3",
     "standard-version": "4.3.0"
   },
   "scripts": {
-    "release": "standard-version",
+    "release": "semantic-release",
     "prepublish": "git push --follow-tags",
     "postinstall": "node -e console.log('#'.repeat(80)+'\\n\\n','docs:'+process.env.npm_package_homepage,'\\n\\n'+'#'.repeat(80))",
-    "commitmsg": "commitlint -e"
+    "semantic-release": "semantic-release"
   },
   "bugs": {
     "url": "https://github.com/canfeit/canfeit/issues"
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-angular"
-    ]
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "semantic-release": "^15.11.0"
   }
 }
