--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   "files": [],
   "dependencies": {
     "fs-extra": "5.0.0",
-    "husky": "^1.1.3",
-    "standard-version": "4.3.0"
+    "husky": "^1.1.3"
   },
   "scripts": {
-    "release": "semantic-release",
+    "release": "release",
     "prepublish": "git push --follow-tags",
     "postinstall": "node -e console.log('#'.repeat(80)+'\\n\\n','docs:'+process.env.npm_package_homepage,'\\n\\n'+'#'.repeat(80))"
   },
@@ -35,7 +34,6 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "semantic-release": "^15.11.0"
+    "@commitlint/config-conventional": "^7.1.2"
   }
 }
