--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "husky": "^1.1.3"
   },
   "scripts": {
+    "dev": "nodemon ./server/app.js",
+    "pm2": "pm2 start pm2.json",
+    "debug": "node --inspect --debug-brk server",
     "release": "release",
     "prepublish": "git push --follow-tags",
     "postinstall": "node -e console.log('#'.repeat(80)+'\\n\\n','docs:'+process.env.npm_package_homepage,'\\n\\n'+'#'.repeat(80))"
