--- a/node/package/demo/package.json
+++ b/node/package/demo/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
