--- a/node/package/demo/package.json
+++ b/node/package/demo/package.json
@@ -1,11 +1,11 @@
 {
   "name": "demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "demo&dmeo",
   "main": "main",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "canfei",
+  "license": "MIT"
 }
