--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   "license": "MIT",
   "files": [],
   "dependencies": {
+    "@types/node": "^11.13.5",
     "fs-extra": "5.0.0",
-    "husky": "^1.1.3"
+    "husky": "^1.1.3",
+    "mysql": "^2.17.0",
+    "mysql2": "^1.6.5",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.16"
   },
   "scripts": {
     "dev": "nodemon ./server/app.js",
