--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.17.0",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "typeorm": "^0.2.16"
   },
   "scripts": {
